tests/positive/pr118c1_print.safe
package pr118c1_print

   subtype counter is integer (0 to 100)

   value : counter = 42

   function log_status (flag : boolean)
      print ("status")
      print (value)
      print (flag and true)
